fix more bugs
- thanks to MonstoBusta for reporting some of these